--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl module OSTypes.
 
 {{$NEXT}}
 
+  - added 'beos' as Unix type
+
   - fix broken tests on MSWin32
   
   - clean up test output
