--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl module Perl::OSType
 
 {{$NEXT}}
 
+  - added 'iphoneos' to support Cydia port
+
 1.000     2010-06-09 16:01:50 EST5EDT
 
   *** BACKWARDS INCOMPATIBLE CHANGE ***
